// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros as key: as key 1`] = `

import { ref } from '../ref.macro';

const state = { [ ref( 'foo' ) ]: true };

      ↓ ↓ ↓ ↓ ↓ ↓

import { ref } from '../ref.macro';

const state = { [ref('foo')]: true };

`;

exports[`macros with args: with args 1`] = `

import { ref } from '../ref.macro';

const foo = ref( 'bar' ) ;

      ↓ ↓ ↓ ↓ ↓ ↓

import { ref } from '../ref.macro';

const foo = ref('bar');

`;

exports[`macros with inject: with inject 1`] = `

import { ref } from '../ref.macro';
import { inject } from '../inject.macro'

class FooComponent extends Template {
    @inject store;
}

const state = { [ ref( 'foo' ) ]: true };

      ↓ ↓ ↓ ↓ ↓ ↓

import { ref } from '../ref.macro';


class FooComponent extends Template {
    get store() {
        return this.DI.resolve('store');
    }

}

const state = { [ref('foo')]: true };

`;
